# ProdKit

./: .editorconfig  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  prodkit.code-workspace
.github/: FUNDING.yml
backend/: .pre-commit-config.yaml  alembic.ini  pyproject.toml
backend/app/: app.py
backend/app/api/: api.py  openapi.py
backend/app/api/router/: auth_routing.py  db_routing.py  routing.py
backend/app/data/dbs/postgres/: postgres.py  utils.py
backend/app/data/dbs/postgres/extensions/sqlalchemy/: __init__.py  types.py
backend/app/data/dbs/postgres/models/: base.py
backend/app/data/models/: __init__.py  account.py  account_type.py  action.py  anonymous.py  api_key.py  app.py  attribute.py  credential.py  file.py  group.py  organization.py  rate_limit.py  resource.py  role.py  scope.py  tenant.py  tenant_activity.py  tenant_lifecycle.py  tenant_setting.py  tenant_type.py  user.py  user_activity.py  user_attribute.py  user_group.py  user_organization.py  user_resource.py  user_role.py  user_scope.py
backend/app/infra/: config.py
backend/app/infra/core/: context.py  cors.py  exceptions.py  middleware.py  postgres.py  redis.py  worker.py
backend/app/infra/kit/: cors.py  enums.py  password.py  password_hash.py  phone.py  utils.py
backend/app/providers/monitoring/: health.py  logging.py
backend/data/dbs/postgres/extensions/sqlalchemy/: types.py
backend/migrations/: README  env.py  script.py.mako
docs/: processes.md  todo.md
