[tool.poetry]
name = "prodkit (backend)"
version = "0.1.0"
description = "A full-stack multi-tenant app"
authors = ["Ehsan Azari"]
license = "BSD 3-Clause License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = {extras = ["standard"], version = "^0.30.3"}
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
sqlalchemy-utils = "^0.41.2"
sqlalchemy-citext = "^1.8.0"
alembic = "^1.13.2"
greenlet = "^3.0.3"
redis = "^5.0.4"
arq = "^0.25.0"
pydantic = "^2.8.2"
pydantic-extra-types = "^2.9.0"
pydantic-settings = "^2.3.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.0"
ruff = "^0.5.4"
pytest = "^8.3.1"
pytest-asyncio = "^0.23.8"
pytest-subtests = "^0.13.1"
pytest-sugar = "^1.0.0"
pytest-recording = "^0.13.2"
pytest-cov = "^5.0.0"
coverage = "^7.6.0"
pre-commit = "^3.7.1"
taskipy = "^1.13.0"
psycopg2-binary = "^2.9.9"
types-redis = "^4.6.0.20240425"
types-python-slugify = "^8.0.2.20240310"
types-requests = "^2.32.0.20240712"
python-dateutil = "^2.9.0.post0"

[tool.taskipy.tasks]
# poetry run task <task>
pre-commit = { cmd = "pre-commit run --all-files" }

[tool.pytest.ini_options]
markers = []
asyncio_mode = "strict"

[tool.coverage.run]
concurrency = ["greenlet"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]  # See: https://github.com/nedbat/coveragepy/issues/831

[tool.ruff]
line-length = 88
target-version = 'py312'
exclude = [
    "venv",
    ".venv",
    "build",
    "dist",
    "migrations",
    "scripts",
]

[tool.ruff.lint]
select = ["F", "E4", "E7", "E9", "I", "N", "W", "C", "Q", "B",]
extend-select = ["I", "UP", "T20"]
ignore = [
    "F841", # remove unused variables
		"UP040", # TypeAlias
]

[tool.ruff.lint.per-file-ignores]
"migrations/*" = [
    "F401", # remove unused import
]
"tests/*" = [
    "D",  # Enforce docstrings in test files
    "F401", # Ignore unused imports in test files
]
"scripts/*" = [
    "T20",
    "E402", # Module level import not at top of file
]

[tool.mypy]
python_version = "3.12"
# mypy_path = "./"
plugins = ["pydantic.mypy"]
files = ["app", "data", "scripts", "tests"]
strict_equality = true
show_error_codes = true
skip_cache_mtime_checks = true
ignore_missing_imports = true
no_implicit_reexport = true
check_untyped_defs = true
allow_untyped_globals = false
disallow_any_decorated = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
